--- a/TPI-BACK-STOCK/package.json
+++ b/TPI-BACK-STOCK/package.json
@@ -5,7 +5,7 @@
   "description": "Api para sistema del tpi de desarrollo de software",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "dev": "node --watch --loader ts-node/esm src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js"
   },
