--- a/TPI-FRONT-STOCK/.gitignore
+++ b/TPI-FRONT-STOCK/.gitignore
@@ -1,5 +1,37 @@
-# Logs
-logs
+# ==========================================
+# 📦 DEPENDENCIAS
+# ==========================================
+node_modules/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+.pnp
+.pnp.js
+
+# ==========================================
+# 🔨 BUILD & DIST
+# ==========================================
+dist/
+dist-ssr/
+build/
+.next/
+out/
+*.tsbuildinfo
+
+# ==========================================
+# 🔐 VARIABLES DE ENTORNO Y SECRETOS
+# ==========================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.local
+
+# ==========================================
+# 📝 LOGS
+# ==========================================
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +39,91 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# ==========================================
+# 🧪 TESTING
+# ==========================================
+coverage/
+*.lcov
+.nyc_output/
+test-results/
+playwright-report/
 
-# Editor directories and files
+# ==========================================
+# 💻 EDITOR & IDE
+# ==========================================
+# VSCode
 .vscode/*
 !.vscode/extensions.json
-.idea
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Other editors
 .DS_Store
+.AppleDouble
+.LSOverride
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+*~
+
+# ==========================================
+# 🗂️ SISTEMA OPERATIVO
+# ==========================================
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ==========================================
+# 🔧 OTROS
+# ==========================================
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*.bak
+*.cache
+
+# Debug files
+.vite-inspect/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
