--- a/TPI-BACK-STOCK/package.json
+++ b/TPI-BACK-STOCK/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "pg": "^8.16.3",
+    "ssl-root-cas": "^1.3.1",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
