--- a/docker/.env
+++ b/docker/.env
@@ -1,18 +1,11 @@
+# Keycloak Database
 POSTGRES_DB=keycloak_db
 POSTGRES_USER=keycloak_db_user
 POSTGRES_PASSWORD=keycloak_db_user_password
+
+# Keycloak Admin
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=ds2025
 
-# .env (en la misma carpeta que docker-compose.yml)
-NODE_ENV=development
-PORT=8000
-DB_HOST=stock_postgres_db
-DB_PORT=5432
-DB_NAME=stock1
-DB_USER=postgres
-DB_PASSWORD=123456789
-
-# Keycloak (para más adelante)
-KEYCLOAK_ISSUER_URL=http://keycloak:8080/realms/ds-2025-realm
-KEYCLOAK_AUDIENCE=grupo-02
+# Supabase Configuration - AGREGAR ESTO
+SUPABASE_DB_PASSWORD=TNNczJndvipl7Kgk
