Atributos de ingles a español

--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,12 @@
+# Keycloak Database
 POSTGRES_DB=keycloak_db
 POSTGRES_USER=keycloak_db_user
 POSTGRES_PASSWORD=keycloak_db_user_password
+
+# Keycloak Admin
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=ds2025
+
+# Supabase Configuration - AGREGAR ESTO
+SUPABASE_DB_PASSWORD=TNNczJndvipl7Kgk
+
