--- a/TPI-FRONT-STOCK/.env.example
+++ b/TPI-FRONT-STOCK/.env.example
@@ -2,6 +2,6 @@
 # 🌐 API Configuration
 # ==========================================
 # URL base de la API del backend
-# En desarrollo: http://localhost:8080/api
-# En producción: https://tu-api.com/api
-VITE_API_BASE_URL=http://localhost:8080/api
+# En desarrollo: http://localhost:8000/v1
+# En producción: https://tu-api.com/v1
+VITE_API_BASE_URL=http://localhost:8000/v1
