--- a/TPI-FRONT-STOCK/package.json
+++ b/TPI-FRONT-STOCK/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14"
   },
