--- a/TPI-FRONT-STOCK/package.json
+++ b/TPI-FRONT-STOCK/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
