--- a/TPI-BACK-STOCK/package.json
+++ b/TPI-BACK-STOCK/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "keycloak-connect": "^26.1.1",
     "pg": "^8.16.3",
     "typeorm": "^0.3.27"
@@ -24,7 +26,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
-    "@types/node": "^24.5.2",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.10.1",
     "@types/pg": "^8.15.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
