--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,8 +14,7 @@ services:
     image: quay.io/keycloak/keycloak:23.0.6
     command: start --import-realm
     environment:
-      KC_HOSTNAME: localhost
-      KC_HOSTNAME_PORT: 8080
+      KC_HOSTNAME_URL: http://localhost:8080
       KC_HOSTNAME_STRICT_BACKCHANNEL: false
       KC_HTTP_ENABLED: true
       KC_HOSTNAME_STRICT_HTTPS: false
@@ -53,10 +52,15 @@ services:
       DB_NAME: postgres
       DB_USER: postgres.vzabfnzrcynffhdjdddv
       DB_PASSWORD: ${SUPABASE_DB_PASSWORD}  # 7[454ATMEpV5
+
+      # Keycloac config
+      KEYCLOAK_TOKEN_URL: ${KEYCLOAK_TOKEN_URL}
+      KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID}  
+      KEYCLOAK_CLIENT_SECRET: ${KEYCLOAK_CLIENT_SECRET}
       
       # Configuración para Keycloak:
       KEYCLOAK_ISSUER_URL: http://keycloak:8080/realms/ds-2025-realm
-      KEYCLOAK_AUDIENCE: grupo-02
+      KEYCLOAK_AUDIENCE: grupo-05
     depends_on:
       keycloak:
         condition: service_started
