--- a/TPI-FRONT-STOCK/package.json
+++ b/TPI-FRONT-STOCK/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
     "@mui/material": "^7.3.5",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
+    "@types/three": "^0.181.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -23,8 +26,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
-    "react-router-dom": "^7.9.4",
+    "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.14",
+    "three": "^0.181.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
