--- a/docker/.env
+++ b/docker/.env
@@ -9,4 +9,5 @@ KEYCLOAK_ADMIN_PASSWORD=ds2025
 
 # Supabase Configuration - AGREGAR ESTO
 SUPABASE_DB_PASSWORD=TNNczJndvipl7Kgk
-
+SUPABASE_DB_USER=postgres.vzabfnzrcynffhdjdddv
+SUPABASE_DB_OPTIONS=""
