--- a/docker/.env
+++ b/docker/.env
@@ -12,6 +12,8 @@ KEYCLOAK_TOKEN_URL=http://keycloak:8080/realms/ds-2025-realm/protocol/openid-con
 KEYCLOAK_CLIENT_ID=grupo-05  
 KEYCLOAK_CLIENT_SECRET=9e676dd4-2790-4191-9f1f-06c6c6fd71e5 
 
+KEYCLOAK_G5_SECRET=va7b8t0Kz8-9ah9giNiHB-cgyCkdpulE
+
 # Supabase Configuration - AGREGAR ESTO
 SUPABASE_DB_PASSWORD=TNNczJndvipl7Kgk
 SUPABASE_DB_USER=postgres.vzabfnzrcynffhdjdddv
